2007-10-29  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.147 - more IE6 fixes 

         * Pages with wide preformatted {{{text blocks}}} where not overflowing correctly on ie6.
         [JSPWiki-2]

         * More updates on collapsible lists for ie6. More testing required.

         * Fixed the SearchBoxMenu to ensure proper width on ie6
         
   
 2007-10-27  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.146 - more IE6 fixes and small gui updates

         * Refactored collapsible lists in view of ie compatibility.
         * Improved layout consistentcy of the quick navigation action buttons
         * Resolved double loading of print.css. (commonheader.jsp)
         

2007-10-26  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.145 - many IE6 fixes and small gui updates

        * Heading rendered wrong in IE6, because IE doesn't like floats with margins.
        [JSPWIKI-4]
        * By default, the more-menu is hidden by default, to avoid bumpy screen rendering 
        for slower page loads. [JSPWiki-9]
        * TabbedSections in IE6 had annoying additional spacing between tab and body

        * BUGZILLA 115: URL Constructor compatibility is fixed for Ajax enabled searches.

        * Align look n feel of collapsible lists, boxes and accordions.
        All hovered actions now get a consistent, neutral color, instead of the previous orange tint. 
        (reported by Murray Altheim)

        * CollapsibleBox update: you can now click anywhere on the title of a collabsible box 
        to open or close it. Previously, you had to hit the +/- collapse button.

        * The %%category now supports any url constructor type. (was failing on jspwiki.org) 
        The look 'n feel of the category popup has been aligned with Tip-Style. 
        (no more orange, but transparent dark grey)

        * The Redo/Undo buttons are moved to the top of the Edit.jsp form, because they function 