@@ -234,7 +234,7 @@ pre {
 }
 /*ie6 hack*/
 * html pre {
-	overflow:none; overflow-x:auto; /*proprieatary ie*/
+	overflow:visible; overflow-x:auto; /*proprieatary ie*/
 	width:95%;  /* hasLayout=true */
 	padding-bottom:1.5em; /*take scrollbar into account on ie*/
 }
@@ -356,15 +356,15 @@ td .information, td .warning, td .error {
 	margin:0;
 }
 .diffnote, .information {
-	background-image:url(images/information.png);
+	background-image:url(images/information.gif);
 	background-color:#e0e0ff;
 }
 .warning {
-	background-image:url(images/error.png);
+	background-image:url(images/exclamation.gif);
 	background-color:#ffff80;
 }
 .error {
-	background-image:url(images/exclamation.png);
+	background-image:url(images/error.gif);
 	background-color:#ffe0e0;
 	color:#c00000;
 }
@@ -841,7 +841,7 @@ a.action.edit, a.action.more {
 }
 a.action.more {
 	padding-right:1.5em;
-	background: #eee url(images/arrdown-small.png) 95% center no-repeat;
+	background: #eee url(images/arrdownsmall.gif) 95% center no-repeat;
 }
 a.action.quick2top, a.action.quick2bottom {
  	overflow:hidden;
@@ -852,7 +852,7 @@ a.action.quick2top, a.action.quick2bottom {
 }
 a.action.quick2top {
 	float:right;
- 	background:url(images/arrup.png) no-repeat 3px 3px;
+ 	background:url(images/arrup.gif) no-repeat 3px 3px;
 }
 a.action.quick2bottom {
  	background:url(images/arrdown.png) no-repeat 3px 3px;
@@ -890,7 +890,7 @@ a.action.quick2bottom {
 	width:16px; 
 	height:16px;
 	border:none;
-	background: #fff url(images/search.png) no-repeat center;
+	background: #fff url(images/search.gif) no-repeat center;
 	overflow:hidden;	
     text-indent:16px;
     cursor:pointer;
@@ -1020,7 +1020,6 @@ div.index .section {
 .weblogentryfooter {
 	font-size:90%;
 	padding:0.25em 0.5em;
-	xxbackground:#e0e0e0;
 	border-bottom:3px solid #e0e0e0;
 	clear:both;
 }
@@ -1405,7 +1404,7 @@ a.slimbox:hover {
 	height:28px;
 	top:0;
 	right:0;
-	background:url(images/slimbox_close.png) no-repeat center;
+	background:url(images/slimbox_close.png) no-repeat;
 	z-index:10;
 }
 #lbBottomContainer *:visited, #lbBottomContainer *:active, #lbBottomContainer *:link,
