@@ -1,3 +1,12 @@
+2007-10-30  Dirk Frederickx (dirk.frederickx@gmail.com)
+
+        * 2.5.148 - ie6 fixes cont'd
+        
+        * Replacing several .png icons by .gif variants, which are better supported 
+        across browsers. The warning and error icons were swapped. (reported by Murray)
+        
+        * Added a small fix on wide pages with {{{blocks}}}
+
 2007-10-29  Dirk Frederickx (dirk.frederickx@gmail.com)
 
         * 2.5.147 - more IE6 fixes 
